# ai_ml_sandbox

./: AI_ML_roadmap.md  README.md
agentic_AI/llamaindex/: .gitignore  README.md  fiveliner_RAG.ipynb  llamaindex_main.py  pyproject.toml  test_by_REST.rest
document-assistant/: README.txt  app.py  conf.py  data_load.py  que_and_ans_chain.py  requirements.txt  test_Q_and_A.py  test_data_load.py
simple-chatbot/: README.md  app.py  chatbot.py  requirements.txt  test_chatbot.py
