[project]
name = "llamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.5",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-llms-google-genai>=0.8.7",
    "llama-index-llms-openai>=0.6.21",
    "python-dotenv>=1.2.1",
]
